第二版改版

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">闲暇时光</string>
+    <string name="app_name">闲暇时光-让时间更有价值</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="scan_tip">将条形码/二维码放入框内，即可自动扫描</string>
